# build

./: BUILDCONFIG.gn
config/: BUILD.gn
toolchain/: cflags.gni
