# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

thumbv7m_cflags = [
  "-march=armv7em",
  "-mcpu=cortex-m3",
  "-mthumb",
]

thumbv8m_cflags = [
  "-march=armv8.1-m.main+mve.fp+fp.dp",
  "-mcpu=cortex-m55",
  "-mthumb",
  "-mfpu=fpv5-d16",
  "-mfloat-abi=hard",
]

aarch64_cflags = [ "-march=armv8-a" ]

if (board == "bcm2711") {
  aarch64_cflags += [ "-mcpu=cortex-a72" ]
} else if (board == "qemu_virt64_aarch64") {
  aarch64_cflags += [ "-mcpu=cortex-a53" ]
}

riscv64_cflags = [
  "-mabi=lp64",
  "-mcmodel=medany",
]

common_ldflags = [ "-Wl,--gc-sections" ]
